# basket

./: .release.json  .rustfmt.toml  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  docs.yml  release.yml
basket/: Cargo.toml
basket-cli/: Cargo.toml
basket-cli/src/: main.rs
basket/src/: error.rs  extract.rs  header.rs  lib.rs  request.rs  response.rs  server.rs
basket/src/response/: into.rs  mod.rs
docs/: cli.tape
examples/: httpbin.rs  json.rs  post.rs  xml.rs
examples/json/: Cargo.toml
examples/json/src/: main.rs
examples/post/: Cargo.toml
examples/post/src/: main.rs
examples/server/: Cargo.toml
examples/server/src/: main.rs
examples/xml/: Cargo.toml
src/: error.rs  lib.rs  request.rs  response.rs
test/: index.js  package.json
